Java doc for methods and classes where needed